# PetriNetPlans

./: .gitignore  CHANGES  README.md
Jarp/: CHANGELOG.rst  CMakeLists.txt  README.TXT  jarp.sh  package.xml
Jarp/scripts/: jarp.sh
PNP/src/: CMakeLists.txt  ConditionScanner.h  conditionchecker.cpp  connection_observer.cpp  petrinet.cpp  pnp_action.cpp  pnp_action_loader_txt.cpp  pnp_executable.cpp  pnp_executer.cpp  pnp_plan.cpp  utils.cpp
PNP/src/basic_plan/: readme.txt  xml_plan_instantiator.cpp
PNP/src/learning_plan/: CMakeLists.txt  ExpPolicy.cpp  Learner.cpp  Marking.cpp  RewardCollector.cpp  learnPlan.cpp  learnPlanFunctors.cpp  learnPlanFunctors.h
PNP/src/learning_plan/algo/: BasicController.cpp  CMakeLists.txt  DelayedQLearning.cpp  LoggingController.cpp  MCESP_SAA.cpp  MonteCarlo.cpp  PlaceLogger.cpp
PNP/src/learning_plan/exp/: CMakeLists.txt  EGreedy.cpp  Exploit.cpp  ExploitWithHysteresis.cpp
PNP/src/parser/: ConditionParser.cpp  ConditionParser.yy  ConditionScanner.cpp  ConditionScanner.yy  parser_come_e_PERCHE.txt
PNP/src/test/: CMakeLists.txt  TestInstantiator.cpp  TestInstantiator.h  XMLPlanLoaderTest.h  configTest.h  mainTest.cpp  testpnp.cpp  testpnp.h
PNP/src/test/cmake/: FindCppUnit.cmake
PNP/src/test/learning_plan/: CMakeLists.txt  LearnPlanTest.cpp  LearnPlanTest.h  MDPAlgorithmTest.cpp  MDPAlgorithmTest.h  MarkingTest.cpp  MarkingTest.h
PNP/src/test/plans/: enabledTransitions.pnml  enabledTransitions2.pnml  env1.pnml  misTyped.txt  testMarking.txt
PNPgen/: AUTOGEN_KPDDLPlan.pnml  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  README.txt  SimpleKPDDLCondPlan_mars.pnml  install_manifest.txt  package.xml  tsp_100.pnml  tsp_200.pnml
PNPgen/cmake/: FindLibpcrecpp.cmake
PNPgen/include/: conditionalplan.h  pnpgenerator.h  policy.h
PNPgen/include/PRUMDP/: DEBUGprint.h  MDP.h  PRU2MDPactionDescriptor.h  PRU2MDPprogress.h
PNPgen/include/pnp_translator/: cff_transl.h  condplan_translator.h  digraph_transl.h  domain_parser.h  pddl_transl.h
PNPgen/src/: genPNP.cpp  pnpgen_condplan.cpp  pnpgen_condplan_translator.cpp  pnpgen_linear.cpp  pnpgen_policy.cpp  pnpgen_pru.cpp  pnpgenerator.cpp  pnpgenerator.h  policy.h  test_genPNP.cpp
PNPgen/src/PRUMDP/: MDP.cpp  MDPsolve.cpp  PRU2MDP.cpp  PRU2MDP.h  PRU2MDPprogress.cpp  PRU2MDPstateStore.cpp  PRU2MDPstateStore.h  PRUconstraint.cpp  PRUplus.cpp  PRUplus.h  PRUprint.cpp
PNPgen/src/pnp_translator/: InLineCP_translator.cpp  InLineCP_translator.h  cff_transl.cpp  condplan_translator.h  digraph_transl.cpp  digraph_transl.h  kpddl_transl.cpp  kpddl_transl.h  pddl_transl.cpp  rddl_parser.cpp  rddl_transl.cpp
PNPgen/test/: DIAG_printer.er  DIAG_printer.plan  hrisubmission.plan  icaps16_1.er  icaps16_1.plan  icaps16_ex1.xml  kpddl_to_condplan.txt  kpddl_to_condplan_cleaning.txt  kpddl_to_condplan_lights.txt  kpddl_to_condplan_mars.txt  pddl_to_condplan.txt  welcome_erasmus.er  welcome_erasmus.plan
PNPnaoqi/: CMakeLists.txt  README.txt  qiproject.xml  run_test.sh  upload.sh
PNPnaoqi/actions/: action_A.py  action_B.py  action_C.py  action_base.py  action_cmd.py  action_displayImage.py  action_moveTo.py  action_pointTo.py  action_posture.py  action_say.py  conditions.py  get_condition.py  init_actions.py  wait.py
PNPnaoqi/plans/: gen_plan.bash  run_plan.py  test2.pnml  test3.er  test3.plan
PNPnaoqi/py/: pnp_cmd_naoqi.py
PNPnaoqi/src/: ActionProxy.cpp  NaoqiActionProxy.cpp  NaoqiActionProxy.h  pnp_naoqi.cpp  pnp_test.cpp
PNPpepper/: CMakeLists.txt  README.txt  qiproject.xml  run_test.sh  test.plan  upload.sh
PNPpepper/actions/: action_A.py  action_B.py  action_C.py  action_base.py  action_cmd.py  conditions.py  set_condition.py  start_action.py
PNPpepper/include/pnp/: connection_observer.h  doc_mainpage.h  pnp_plan.hpp  pnpfwd.h
PNPpepper/include/pnp/parser/: ConditionParser.hpp  ConditionScanner.h  parserfwd.h
PNPpepper/plans/: run_plan.py  test.plan  test.pnml  test2.plan
PNPpepper/src/: ActionProxy.cpp  ActionProxy.h  NaoqiActionProxy.cpp  connection_observer.cpp  pnp_naoqi.cpp  pnp_test.cpp  test_flex.cpp  test_pnp.cpp
PNPpepper/src/basic_plan/: xml_plan_instantiator.cpp
PNPpepper/src/parser/: ConditionParser.cpp  ConditionScanner.cpp
PNPros/: CMakeLists.txt  README.md  README.txt  mainpage.dox  makedist.sh  manifest.xml  testPNP.sh
PNPros/ROS_bridge/pnp_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
PNPros/ROS_bridge/pnp_msgs/action/: PNP.action
PNPros/ROS_bridge/pnp_msgs/srv/: PNPReward.srv
PNPros/ROS_bridge/pnp_ros/: CHANGELOG.rst  CMakeLists.txt  README.md  README.txt  init.bash  package.xml  package.xml~  testPNP.sh
PNPros/ROS_bridge/pnp_ros/actions/: AbstractAction.py  goto.py  gotoposition.py  say.py
PNPros/ROS_bridge/pnp_ros/conditions/: AbstractCondition.py  ConditionManager.py  (+2 more)
PNPros/ROS_bridge/pnp_rosplan/: CMakeLists.txt  README.txt  package.xml
PNPros/example/rosplan_to_pnp/: CMakeLists.txt  package.xml
PNPros/example/rp_action/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  package.xml~
PNPros/example/rp_action_msgs/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
PNPros/example/rp_demo/: package.xml
PNPros/example/rp_pnp/: CMakeLists.txt  package.xml
PNPros/example/tug_example_actions/: CHANGELOG.rst  CMakeLists.txt  package.xml
PNPros/example/tug_example_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
PNPros/example/tug_example_pnp_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
PNPros/examples/rp_example/: README.md
PNPros/include/PNPros/: PNPActionServer.h
PNPros/launch/: PNPros.launch
PNPros/msg/: Action.msg  ActionFinished.msg
PNPros/plans/: MultiRobot.pnml  interrupt.pnml  sensing.pnml
PNPros/src/: ActionProxy.cpp  ActionProxy.h  PNPActionServer.cpp  ROSConds.cpp  ROSConds.h  ROSInst.cpp  main.cpp
PNPros/src/LearnPNP/: ROSLearnInstantiator.cpp  ROSLearnInstantiator.h  ROSReward.cpp  ROSReward.h
PNPros/srv/: PNPClearBuffer.srv  PNPCondition.srv  PNPGetVariableValue.srv  PNPLastEvent.srv  PNPSetVariableValue.srv
PNPros/test/: PNPActionServer.py
(+242 files in other folders)
